--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get_storage: ^2.1.1
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.1
+  fluttertoast: ^8.2.2
+  custom_navigation_bar: ^0.8.2
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +47,6 @@ dev_dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
