AwassamDialog FireBase and connect with api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,15 @@ dependencies:
   fluttertoast: ^8.2.2
   custom_navigation_bar: ^0.8.2
   awesome_dialog: ^3.1.0
+  firebase_auth: ^4.6.3
+  dio: ^5.2.1+1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -75,7 +77,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
-
+    - assets/jsonfils/CountryCodes.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
